# LLM4Workflow

./: LICENSE  README.md
backend/: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml
backend/app/: api.json  create_game.py  custom_api.py  db.py  init.sql  json_loader.py  rag.py  schema.py  server.py  utils.py  vectorStore.py  write_dag.py  write_xml.py
frontend/: .eslintrc.cjs  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: api.ts  apiService.ts  schema.ts
frontend/src/hooks/: useChatLog.ts
frontend/src/utils/: constants.ts  renderer.ts
frontend/src/view/: Home.tsx
frontend/src/view/collection/: CollectionModal.tsx
frontend/src/view/components/: ChatMessageBubble.tsx  MarkdownRender.tsx  index.css
frontend/src/view/components/FlowGraph/: FlowChart.tsx  data.ts
frontend/src/view/components/MarkDownViewer/: MardkDownViewer.tsx  markdown-styles.css
frontend/src/view/components/chatPanel/: index.tsx
frontend/src/view/setting/: Setting.tsx
frontend/src/view/workflow/: Retrieve.tsx  RewriteModal.tsx  RewriteQuery.tsx  Workflow.tsx  workflow.css
